--- a/0-preface.qmd
+++ b/0-preface.qmd
@@ -164,7 +164,7 @@ datasets = data.frame(
     "White wine quality dataset."
   ),
   Chapter = c("Chapters 4, 6, 7, 8, 10", 
-              "Chapters 7, 12", 
+              "Chapters 6, 7, 12", 
               "Chapters 3, 11", 
               "Chapter 9", 
               "Chapter 10", 
