--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -489,7 +489,7 @@ This formula includes both the transformed categorical predictors and the numeri
 
 #### Feature Scaling for Numerical Predictors {.unnumbered}
 
-Neural networks perform best when input features are on a similar scale. To achieve this, we normalize numerical variables using min-max scaling, transforming all inputs into a standardized range between 0 and 1. This prevents features with larger numerical ranges from dominating the learning process and helps improve model convergence.
+Neural networks perform best when input features are on a similar scale. To achieve this, we scale numerical variables using min-max scaling, transforming all inputs into a standardized range between 0 and 1. This prevents features with larger numerical ranges from dominating the learning process and helps improve model convergence.
 
 To prevent data leakage, the scaling parameters (minimum and maximum values) are computed using only the training set and then applied consistently to the test set. This ensures that no information from the test data influences model training, thereby preserving the independence of the evaluation step. For a visual example of how improper scaling can distort evaluation, refer to @fig-ch7-ex-proper-scaling in Section [-@sec-ch7-knn-prep].
 
@@ -791,7 +791,7 @@ This set of exercises extends your neural network modeling skills to a second da
 
 33. Preprocess the categorical features using one-hot encoding.
 
-34. Normalize the numerical features using min-max scaling.
+34. Scale the numerical features using min-max scaling.
 
 35. Split the dataset into training (80%) and testing (20%) sets.
 
