--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -362,7 +362,7 @@ ggplot(cereal_mm) +
 
 As shown in the histograms, the sodium feature is rescaled to the $[0, 1]$ range. This prevents variables like sodium or potassium (originally measured in large units) from overpowering the clustering process.
 
-With the dataset cleaned, imputed, and normalized, we are now ready to explore how cereals naturally group together. But first, how many clusters should we use?
+With the dataset cleaned, imputed, and scaled, we are now ready to explore how cereals naturally group together. But first, how many clusters should we use?
 
 ### Selecting the Number of Clusters
 
@@ -489,7 +489,7 @@ The exercises are grouped into two categories: conceptual questions and practica
 
 11. Describe a scenario where Euclidean distance might not be an appropriate similarity measure for clustering.
 
-12. Why do we need to normalize or scale variables before applying K-means clustering?
+12. Why do we need to scale features before applying K-means clustering?
 
 13. How does clustering help in dimensionality reduction and preprocessing for supervised learning?
 
@@ -527,7 +527,7 @@ str(redWines)
 
 24. Since clustering requires numerical features, remove any non-numeric columns from the dataset.
 
-25. Apply min-max scaling to normalize all numerical variables before clustering. Why is this step necessary?
+25. Apply min-max scaling to all numerical features before clustering. Why is this step necessary?
 
 ##### Applying k-means Clustering {.unnumbered}
 
